--- a/profile.html
+++ b/profile.html
@@ -86,12 +86,18 @@
         .menu1{
             flex-direction: column;
             max-width: 60%;
+            
+        }
+        .menu1{
             border: 1px solid;
         }
         .profile{
             width: 100%;
+            height: 300px;
             flex-direction: row;
             justify-content: space-evenly;
+            background-color: rgb(247, 244, 247);
+            border-radius: 15px;
         }
         .profile img{
             max-height: 150px;
@@ -100,11 +106,16 @@
         .profile-details{
             height: 150px;
             justify-content: space-evenly;
+            align-items: start;
             flex-direction: column;
         }
-        .profile-details ul{
-            display: flex;
-            flex-direction: row;
+        #profile-credits{
+            width: 350px;
+           display: flex;
+           justify-content: space-between;
+        }
+        ul li{
+            list-style: none;
         }
     </style>
 </head>
@@ -155,10 +166,10 @@
         <div class="menu1">
             <div class="profile">
                 <div><img src="images/3~2.jpg" alt=""></div>
-                <div class="profile-details">
-                    <div>_navi_0048</div>
+                <div class="profile-details">       
+                    <div style="font-size: 20px;">_navi_0048</div>
                     <div>
-                        <ul>
+                        <ul id="profile-credits">
                             <li>0 posts</li>
                             <li>500 follower</li>
                             <li>100 following</li>
@@ -166,13 +177,14 @@
                     </div>
                     <div>
                         <ul>
-                            <li>Navneet Yadav</li>
-                            <li>spacious</li>
+                            <li style="font-size: 14px; font-weight: bold;">Navneet Yadav</li>
+                            <li style="font-size: 13px;">#spacious</li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="profile-posts">
+                
                 <img src="images/3~2.jpg" alt="" height="100">
             </div>
         </div>
