--- a/profile.html
+++ b/profile.html
@@ -3,63 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="search.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;800&display=swap" rel="stylesheet">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            font-family: Nunito;
-        }
-
         .frame {
-            display: grid;
-            grid-template-columns: 1fr 5fr;
-            height: 100vh;
+            grid-template-columns: 1fr 4.5fr;
         }
 
-        .menu-bar {
-            display: flex;
-            justify-content: left;
-            align-items: center;
-            font-weight: 500;
-            font-size: 16px;
+        .menu-top {
+            display: none;
         }
 
-        .bottom {
-            position: absolute;
-            bottom: 0;
-        }
-
-        .text {
-            padding-bottom: 5px;
-            cursor: pointer;
-        }
-
-        .menu-bar img {
-            height: 23px;
-            margin: 15px;
-        }
-
-
-        #hover1:hover,
-        #hover2:hover,
-        #hover3:hover,
-        #hover4:hover,
-        #hover5:hover,
-        #hover6:hover,
-        #hover7:hover {
-            background-color: rgb(247, 244, 247);
-            font-weight: 700;
-            border-radius: 0px 12px 12px 0px;
-        }
-
-        #logo {
-            margin: 20px;
-            height: 45px;
+        #hover2 {
+            background-color: transparent;
+            font-weight: normal;
+            border-radius: 0;
         }
 
         #hover7 {
@@ -68,96 +31,84 @@
             border-radius: 0px 12px 12px 0px;
         }
 
-        .menu {
-            border-right: 1px solid rgb(255, 239, 228);
-            display: flex;
-            position: relative;
-            flex-direction: column;
-            height: 100vh;
-
+        .profile {
+            width: 600px;
+            margin-top: 60px;
         }
 
-        .menu1,
-        .profile,
-        .profile-details {
+        .profile-container,
+        ul {
             display: flex;
+            justify-content: space-evenly;
             align-items: center;
         }
 
-        .menu1 {
-            justify-content: center;
-            flex-direction: column;
-            max-width: 60%;
-            height: 100vh;
-            margin-top: 30px;
-        }
-
-        #profile {
-            height: 20px;
+        .profile-container img {
+            height: 140px;
             border-radius: 50%;
         }
 
-
-        .profile {
-            width: 100%;
-            height: 300px;
-            flex-direction: row;
-            justify-content: space-evenly;
-            background-color: rgb(247, 244, 247);
-            border-radius: 15px;
-        }
-
-        .profile img {
-            max-height: 150px;
-            border-radius: 50%;
-        }
-
-        .profile-details {
-            height: 150px;
-            justify-content: space-evenly;
-            align-items: start;
-            flex-direction: column;
-        }
-
-        #profile-credits {
-            width: 350px;
+        .profile-credits {
+            height: 100px;
             display: flex;
+            flex-direction: column;
             justify-content: space-between;
+        }
+
+        ul {
+            justify-content: space-between;
+            width: 300px;
         }
 
         ul li {
             list-style: none;
         }
 
-        .profile-posts {
+        .posts {
+            width: 700px;
+            height: 100%;
+            position: relative;
+            margin-top: 10px;
+            padding-top: 40px;
+            background-color: rgb(241, 244, 255);
+            border-radius: 10px;
+        }
+
+        .posts img {
+            height: 235px;
+        }
+
+        .tag {
+            position: absolute;
             width: 100%;
-            height: 100vh;
-            display: grid;
-            grid-template-columns: auto auto auto;
-            overflow-y: scroll;
-            border-radius: 15px;
+            top: 6px;
+            text-align: center;
+            font-weight: bold;
+            background-color: rgb(241, 244, 255);
         }
 
-        .profile-posts::-webkit-scrollbar {
-            display: none;
-        }
-
-        .profile-posts img {
-            max-height: 266px;
-        }
-
-        .menu-top,
-        .menu-bottom {
-            display: none;
-        }
-
-        @media screen and (max-width:650px) and (min-width:501px) {
-            .frame {
-                grid-template-columns: auto auto;
+        @media only screen and (max-width:950px) {
+            .posts {
+                width: 600px;
+            }
+            .posts img{
+                width: 100%;
+                height: auto;
             }
 
+        }
+        @media only screen and (max-width:800px) and (min-width:500px) {
+
+            .posts,.profile{
+                width: 500px;
+            }
+            .menu2,
             .text {
                 display: none;
+            }
+
+            .menu0 {
+                align-items: center;
             }
 
             #logo {
@@ -165,62 +116,20 @@
                 height: 32px;
             }
 
-            #svg7 {
-                display: none;
+            .frame {
+                grid-template-columns: auto auto;
             }
-
-            .id {
-                width: 70px;
-            }
-
-            .profile img {
-                height: 100px;
-            }
-
         }
 
-        @media screen and (max-width:499px) {
-
-            #hover1:hover,
-            #hover2:hover,
-            #hover3:hover,
-            #hover4:hover,
-            #hover5:hover,
-            #hover6:hover,
-            #hover7:hover {
-                background-color: white;
-                font-weight: normal;
-                border-radius: 20px;
-            }
-
-            .menu {
-                display: none;
-            }
-
+        @media screen and (max-width:500px) {
             .frame {
                 grid-template-columns: auto;
             }
-
-            .menu1 {
+            .posts,.profile{
                 width: 100%;
-                height: 100vh;
             }
-
             #logo {
                 margin: 0px 10px;
-            }
-
-            .profile img {
-                height: 80px;
-            }
-
-            .profile-posts {
-                height: 100vh;
-            }
-
-            .profile-posts img {
-                max-width: 100%;
-                height: auto;
             }
 
             .menu-top {
@@ -231,7 +140,7 @@
                 align-items: center;
                 text-align: left;
                 grid-template-columns: 2fr 0.3fr 0.3fr;
-                width: 100%;
+                width: 100vw;
                 z-index: 100;
             }
 
@@ -240,38 +149,51 @@
                 margin: 10px 0px;
             }
 
-            .menu-bottom {
-                position: fixed;
-                bottom: 0;
-                background: white;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-evenly;
-                align-items: center;
+            .profile {
                 width: 100%;
             }
 
+            .profile-container img {
+                height: 90px;
+            }
+            .posts{
+                margin-top: 70px;
+                padding-bottom: 60px;
+            }
 
+            ul {
+                width: 250px;
+                margin: 6px 0px;
+            }
+
+            ul li {
+                text-align: center;
+            }
+
+            #hover7 {
+                border-radius: 20px;
+            }
         }
     </style>
 </head>
 
 <body>
+
     <div class="frame">
-        <div class="menu">
-            <div id="logo-div"><img id="logo" src="./images/Instagram.png" alt="logo"></div>
+        <div class="menu menu0">
+            <div><img id="logo" src="./images/Instagram.png" alt="logo"></div>
 
 
-            <div id="hover1" class="menu-bar home">
-                <div><img src="./images/home.jpg" alt="home"></div>
-                <div class="text">Home</div>
-            </div>
-            <a class="postman" href="search.html">
-                <div id="hover2" class="menu-bar find">
-                    <div><img src="./images/search.png" alt="search"></div>
-                    <div class="text">Search</div>
+            <a class="postman" href="index.html">
+                <div id="hover1" class="menu-bar home">
+                    <div><img src="./images/home.jpg" alt="home"></div>
+                    <div class="text">Home</div>
                 </div>
             </a>
+            <div id="hover2" class="menu-bar find">
+                <div><img src="./images/search.png" alt="search"></div>
+                <div class="text">Search</div>
+            </div>
             <div id="hover3" class="menu-bar">
                 <div><img src="./images/heart.png" alt="notification"></div>
                 <div class="text">Notifications</div>
@@ -297,66 +219,65 @@
                 <div class="text">More</div>
             </div>
         </div>
-        <div class="menu1">
+
+        <div class="search">
             <div class="profile">
-                <div><img src="images/3~2.jpg" alt=""></div>
-                <div class="profile-details">
-                    <div style="font-size: 20px;">_navi_0048</div>
-                    <div>
-                        <ul id="profile-credits">
-                            <li>0 posts</li>
-                            <li>500 follower</li>
-                            <li>100 following</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul>
-                            <li style="font-size: 14px; font-weight: bold;">Navneet Yadav</li>
-                            <li style="font-size: 13px;">#spacious</li>
-                        </ul>
+                <div class="profile-container">
+                    <img src="images/3~2.jpg" alt="">
+                    <div class="profile-credits">
+                        <h2>_navi_0048</h3>
+                            <ul>
+                                <li>0 Posts</li>
+                                <li>500 followers</li>
+                                <li>100 following</li>
+                            </ul>
+                            <h4>Navneet Yadav</h4>
+                            <p>#spacious</p>
                     </div>
                 </div>
             </div>
-            <div class="profile-posts">
 
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
-                <img src="images/3~2.jpg" alt="">
+            <div class="posts">
+                <div class="tag">POSTS</div>
+                <img src="https://source.unsplash.com/random/1080x1080/?cars" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?animals" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?quotes" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?sky" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?space" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?planets" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?nature" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?mountains" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?citys" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?skyscrapers" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?coding" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?robot" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?spacex" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?internet" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?men" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?boy" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?puppies" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?women" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?girl" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?college" alt="">
+                <img src="https://source.unsplash.com/random/1080x1080/?books" alt="">
             </div>
         </div>
-
-
-
-        <!-- mediaquery -->
 
         <div class="menu-top">
             <div><img id="logo" src="./images/Instagram.png" alt="logo"></div>
             <div><img src="./images/heart.png" alt="notification"></div>
             <div><img src="./images/messenger.png" alt="chat"></div>
         </div>
-
-
         <div class="menu-bottom">
-            <div id="hover1" class="menu-bar home">
-                <div><img src="./images/home.jpg" alt="home"></div>
-            </div>
-            <a class="postman" href="search.html">
-                <div id="hover2" class="menu-bar find">
-                    <div><img src="./images/search.png" alt="search"></div>
+            <a class="postman" href="index.html">
+                <div id="hover1" class="menu-bar home">
+                    <div><img src="./images/home.jpg" alt="home"></div>
                 </div>
             </a>
+            <div id="hover2" class="menu-bar find">
+                <div><img src="./images/search.png" alt="search"></div>
+            </div>
+
             <div id="hover4" class="menu-bar">
                 <div><img src="./images/story.png" alt="add"></div>
             </div>
