--- a/create.html
+++ b/create.html
@@ -19,13 +19,14 @@
             display: none;
         }
 
+        #hover7,
         #hover2 {
             background-color: transparent;
             font-weight: normal;
             border-radius: 0;
         }
 
-        #hover7 {
+        #hover6 {
             background-color: rgb(247, 244, 247);
             font-weight: 700;
             border-radius: 0px 12px 12px 0px;
@@ -33,75 +34,90 @@
 
         .profile {
             width: 600px;
+            height: 80%;
             margin-top: 60px;
+            background-color: rgb(247, 244, 247);
+            border-radius: 20px;
         }
 
-        .profile-container,
-        ul {
+        .profile-container {
             display: flex;
+            flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
         }
 
+        #image-preview {
+            width: 250px;
+            height: 250px;
+            margin: 10px;
+            background-color: rgb(214, 214, 215);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
         .profile-container img {
-            height: 140px;
-            border-radius: 50%;
+            max-width: 250px;
+            width: auto;
+            max-height: 250px;
+            height: auto;
         }
 
         .profile-credits {
-            height: 100px;
+            height: 150px;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: space-evenly;
         }
 
-        ul {
-            justify-content: space-between;
+        input {
+            position: relative;
+            margin: 0;
+            height: 38px;
+            border-radius: 8px;
+        }
+
+        input[type=file] {
             width: 300px;
         }
 
-        ul li {
-            list-style: none;
+        label {
+            background-color: rgb(17, 88, 255);
+            color: white;
+            font-size: 13px;
+            padding: 0.2rem;
+            border-radius: 0.3rem;
+            cursor: pointer;
         }
 
-        .posts {
-            width: 700px;
-            height: 100%;
-            position: relative;
-            margin-top: 10px;
-            padding-top: 40px;
-            background-color: rgb(241, 244, 255);
-            border-radius: 10px;
-        }
-
-        .posts img {
-            height: 235px;
-        }
-
-        .tag {
-            position: absolute;
-            width: 100%;
-            top: 6px;
-            text-align: center;
-            font-weight: bold;
-            background-color: rgb(241, 244, 255);
+        button {
+            height: 30px;
+            color: white;
+            background-color: rgb(39, 154, 248);
+            border-radius: 7px;
+            border: none;
         }
 
         @media only screen and (max-width:950px) {
             .posts {
                 width: 600px;
             }
-            .posts img{
+
+            .posts img {
                 width: 100%;
                 height: auto;
             }
 
         }
+
         @media only screen and (max-width:800px) and (min-width:500px) {
 
-            .posts,.profile{
+            .posts,
+            .profile {
                 width: 500px;
             }
+
             .menu2,
             .text {
                 display: none;
@@ -120,8 +136,9 @@
                 grid-template-columns: auto auto;
             }
         }
+
         @media only screen and (max-width:630px) {
-            .menu{
+            .menu {
                 border: none;
             }
         }
@@ -130,9 +147,12 @@
             .frame {
                 grid-template-columns: auto;
             }
-            .posts,.profile{
+
+            .posts,
+            .profile {
                 width: 100%;
             }
+
             #logo {
                 margin: 0px 10px;
             }
@@ -155,28 +175,39 @@
             }
 
             .profile {
-                width: 100%;
+                width: 80%;
             }
 
             .profile-container img {
-                height: 90px;
-            }
-            .posts{
-                margin-top: 70px;
-                padding-bottom: 60px;
+                max-width: 250px;
+                width: auto;
+                max-height: 250px;
+                height: auto;
             }
 
-            ul {
+            .profile-credits {
                 width: 250px;
-                margin: 6px 0px;
             }
 
-            ul li {
-                text-align: center;
+            input {
+                width: 92%;
+                height: 35px;
             }
 
-            #hover7 {
+            input[type=file] {
+                width: 190px;
+            }
+
+            #hover4 {
+                background-color: rgb(247, 244, 247);
+                font-weight: 700;
                 border-radius: 20px;
+            }
+
+            #hover6 {
+                background-color: transparent;
+                font-weight: normal;
+                border-radius: 0;
             }
         }
     </style>
@@ -227,44 +258,22 @@
 
         <div class="search">
             <div class="profile">
-                <div class="profile-container">
-                    <img src="images/3~2.jpg" alt="">
-                    <div class="profile-credits">
-                        <h2>_navi_0048</h2>
-                            <ul>
-                                <li>0 Posts</li>
-                                <li>500 followers</li>
-                                <li>100 following</li>
-                            </ul>
-                            <h4>Navneet Yadav</h4>
-                            <p>#spacious</p>
-                    </div>
-                </div>
-            </div>
+                <form action="" method="post">
+                    <div class="profile-container">
+                        <div id="image-preview">
+                            <img id="preview" alt="">
+                        </div>
 
-            <div class="posts">
-                <div class="tag">POSTS</div>
-                <img src="https://source.unsplash.com/random/1080x1080/?cars" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?animals" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?quotes" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?sky" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?space" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?planets" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?nature" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?mountains" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?citys" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?skyscrapers" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?coding" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?robot" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?spacex" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?internet" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?men" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?boy" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?puppies" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?women" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?girl" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?college" alt="">
-                <img src="https://source.unsplash.com/random/1080x1080/?books" alt="">
+                        <input id="choose-file" type="file" accept="image/*" onchange="previewImage(event)" hidden />
+                        <label for="choose-file">add image</label>
+                        <div class="profile-credits">
+                            <h4>_navi_0048</h4>
+                            <input type="text" placeholder="add caption">
+                            <input type="text" placeholder="Location">
+                            <button type="submit">Post</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
 
@@ -294,6 +303,19 @@
             </div>
         </div>
     </div>
+    <script>
+        function previewImage(event) {
+            var input = event.target;
+            var image = document.getElementById('preview');
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    image.src = e.target.result;
+                }
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+    </script>
 
 </body>
 
